# RogerPDF

./: .gitignore  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  RogerPDF.slnx  RogerPDF.vcxproj  RogerPDF.vcxproj.filters  XamlMetaDataProvider.idl  app.manifest  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.h  readme.txt
